Fix inner scroll alignment

--- a/src/assets/styles/cmps/group/GroupPreview.scss
+++ b/src/assets/styles/cmps/group/GroupPreview.scss
@@ -17,10 +17,7 @@
         display: flex;
         flex-direction: column;
 
-        &.scrolling {
-            padding-inline-end: rem(4px);
-
-        }
+        padding-inline-end: rem(4px);
 
         .group-header {
             display: grid;
